--- a/index.html
+++ b/index.html
@@ -1,41 +1,417 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-  <!-- custom css -->
-  <link rel="stylesheet" href="Css/index.css">
+    <!-- custom css -->
+    <link rel="stylesheet" href="Css/index.css" />
+    <!-- Montserrat Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <!-- Bootstrap Css-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
 
-  <!-- materials Icon -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
-      rel="stylesheet">
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Material Icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container-fluid px-0">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light shadow">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <span class="material-icons-outlined me-1">Important_devices</span>
+            Nov Developer
+          </a>
+          <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="container px-3">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link me-lg-3" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-lg-3" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-lg-3" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-lg-3" href="#testimonials"
+                    >Testimonials</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-lg-3" href="#contact">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!-- End of Navbar -->
+      <!-- Hero -->
+      <header class="bg-light py-5">
+        <div class="container px-5">
+          <div class="row align-items-center">
+            <div class="col-lg-8 col-xl-7 col-xxl-6">
+              <div class="my-5">
+                <h2 class="text-center fw-bold mb-2">Hi! I am Novestus,</h2>
+                <h2 class="text-primary text-center fw-bold mb-2">
+                  a full-stack web developer
+                </h2>
+                <p class="lead text-muted mb-4">
+                  I specialize in building web applications using React and
+                  Django. Scroll down to see what I have been working on.
+                </p>
+                <div class="d-grid gap-3 d-sm-flex justify-content-center">
+                  <a
+                    class="btn btn-primary btn-large text-uppercase"
+                    href="#about"
+                  >
+                    Learn More
+                    <span class="material-icons-outlined ms-2"
+                      >help_outline</span
+                    >
+                  </a>
+                  <a
+                    class="btn btn-outline-primary btn-large text-uppercase"
+                    href="#projects"
+                  >
+                    View My Work
+                    <span class="material-icons-outlined ms-2"
+                      >manage_search</span
+                    >
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-5 col-xxl-6 justify-content-center">
+              <img
+                class="img-fluid rounded-3 my-5"
+                src="images/hero.jpg"
+                alt="Hero Image"
+              />
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- End Hero -->
+
+      <main>
+        <!-- About -->
+        <section id="about" class="text-center py-5">
+          <div class="container py-5">
+            <div class="row justify-content-center">
+              <h2 class="fw-bold">About</h2>
+              <p class="lead text-muted mb-5">
+                I am a freelance web developer who builds elegant, fast, and
+                scalable web applications.
+              </p>
+            </div>
+          </div>
+          <div class="container mb-5">
+            <div class="row">
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="d-flex mb-5 about">
+                  <span class="material-icons-outlined m-auto text-primary"
+                    >palette</span
+                  >
+                </div>
+                <h5>Design</h5>
+                <p class="text-muted mb-0">
+                  I create beautiful, modern designs optimized for multiple
+                  color modes (light and dark themes).
+                </p>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="d-flex mb-5 about">
+                  <span class="material-icons-outlined m-auto text-primary"
+                    >code</span
+                  >
+                </div>
+                <h5>Development</h5>
+                <p class="text-muted mb-0">
+                  I develop responsive, scalable, and fast applications using
+                  the best standards and coding practices.
+                </p>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="d-flex mb-5 about">
+                  <span class="material-icons-outlined m-auto text-primary"
+                    >settings</span
+                  >
+                </div>
+                <h5>Launch & Maintenance</h5>
+                <p class="text-muted mb-0">
+                  Once the application is ready, I will help you launch it and
+                  teach you how to update and maintain it.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End About -->
+        <!-- Projects -->
+        <section id="projects" class="text-center py-5">
+          <div class="container py-5">
+            <div class="row justify-content-center">
+              <h2 class="fw-bold">Projects</h2>
+              <p class="lead text-muted mb-5">
+                View some of my latest projects
+              </p>
+            </div>
+          </div>
+          <div class="container mb-5">
+            <div class="row">
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="card h-100 shadow-lg border-0 bg-light">
+                  <img
+                    class="card-img-top"
+                    src="images/project1.jpg"
+                    alt="Project 1"
+                  />
+                  <div class="card-body p-4">
+                    <h5 class="card-title mb-3">Cryptocurrency Dashboard</h5>
+                    <div class="mb-2">
+                      <div class="badge bg-primary rounded-pill">Django</div>
+                      <div class="badge bg-primary rounded-pill">React</div>
+                      <div class="badge bg-primary rounded-pill">
+                        Material UI
+                      </div>
+                    </div>
+                    <p class="card-text">
+                      A cryptocurrency dashboard app built using React 17,
+                      Material UI 5 and Chart.js 3.
+                    </p>
+                  </div>
+                  <div class="card-footer bg-transparent mb-3">
+                    <a
+                      class="btn btn-outline-primary btn-sm text-uppercase"
+                      href="#"
+                      target="_blank"
+                    >
+                      <span class="material-icons-outlined me-1">code</span>
+                      Source Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="card h-100 shadow-lg border-0 bg-light">
+                  <img
+                    class="card-img-top"
+                    src="images/project2.jpg"
+                    alt="Project 2"
+                  />
+                  <div class="card-body p-4">
+                    <h5 class="card-title mb-3">Portfolio Website</h5>
+                    <div class="mb-2">
+                      <div class="badge bg-primary rounded-pill">Django</div>
+                      <div class="badge bg-primary rounded-pill">React</div>
+                      <div class="badge bg-primary rounded-pill">
+                        Material UI
+                      </div>
+                    </div>
+                    <p class="card-text">
+                      A portfolio website built using Django 3, Next.js 12 and
+                      Material UI 5 that uses a PostgreSQL database to store
+                      data.
+                    </p>
+                  </div>
+                  <div class="card-footer bg-transparent mb-3">
+                    <a
+                      class="btn btn-outline-primary btn-sm text-uppercase"
+                      href="#"
+                      target="_blank"
+                    >
+                      <span class="material-icons-outlined me-1">code</span>
+                      Source Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="card h-100 shadow-lg border-0 bg-light">
+                  <img
+                    class="card-img-top"
+                    src="images/project3.jpg"
+                    alt="Project 3"
+                  />
+                  <div class="card-body p-4">
+                    <h5 class="card-title mb-3">Image Classification</h5>
+                    <div class="mb-2">
+                      <div class="badge bg-primary rounded-pill">Django</div>
+                      <div class="badge bg-primary rounded-pill">React</div>
+                      <div class="badge bg-primary rounded-pill">
+                        Material UI
+                      </div>
+                    </div>
+                    <p class="card-text">
+                      An image classification app built using TensorFlow 2,
+                      Django 3, React 17 and Material UI 5.
+                    </p>
+                  </div>
+                  <div class="card-footer bg-transparent mb-3">
+                    <a
+                      class="btn btn-outline-primary btn-sm text-uppercase"
+                      href="#"
+                      target="_blank"
+                    >
+                      <span class="material-icons-outlined me-1">code</span>
+                      Source Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End Projects -->
+        <hr />
+
+              <!-- Testimonials -->
+              <section id="testimonials" class="text-center py-5">
+                <div class="container py-5">
+                  <div class="row justify-content-center">
+                    <h2 class="fw-bold">Testimonials</h2>
+                    <p class="lead text-muted mb-5">Check what clients have said about my work</p>
+                  </div>
+                </div>
+                <div class="container mb-5">
+                  <div class="row">
+                    <div class="col-lg-4 mx-auto mb-5">
+                      <div class="text-center fs-4 fst-italic mb-4 px-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                        quis elit ut tellus tempus pharetra.
+                      </div>
+                      <div class="d-flex align-items-center justify-content-center testimonial">
+                        <img class="rounded-circle me-3" src="images/user1.jpg" alt="User 1">
+                        <div class="fw-bold">
+                          Amy Jones
+                          <span class="text-primary mx-1">/</span>
+                          CEO, Company 1
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 mx-auto mb-5">
+                      <div class="text-center fs-4 fst-italic mb-4 px-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                        quis elit ut tellus tempus pharetra.
+                      </div>
+                      <div class="d-flex align-items-center justify-content-center testimonial">
+                        <img class="rounded-circle me-3" src="images/user2.jpg" alt="User 2">
+                        <div class="fw-bold">
+                          James Smith
+                          <span class="text-primary mx-1">/</span>
+                          CEO, Company 2
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 mx-auto mb-5">
+                      <div class="text-center fs-4 fst-italic mb-4 px-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                        quis elit ut tellus tempus pharetra.
+                      </div>
+                      <div class="d-flex align-items-center justify-content-center testimonial">
+                        <img class="rounded-circle me-2" src="images/user3.jpg" alt="User 3">
+                        <div class="fw-bold">
+                          Mary Richards
+                          <span class="text-primary mx-1">/</span>
+                          CEO, Company 3
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <!-- End Testimonials -->
       
-  <!-- custom bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+      
 
+        <hr />
 
+        <!-- Contact -->
+        <section id="contact" class="text-center py-5">
+          <div class="container py-5">
+            <div class="row justify-content-center">
+              <h2 class="fw-bold">Contact</h2>
+              <p class="lead text-muted mb-5">
+                Do you need a full-stack web developer? I would love to hear
+                from you.
+              </p>
+            </div>
+          </div>
+          <div class="container mb-5">
+            <div class="row">
+              <!-- <div class="col-xl-5 col-xxl-6 mb-5">
+                <div id="map"></div>
+              </div> -->
+              <div class="col-lg-8 col-xl-7 col-xxl-6 mb-5 ">
+                <div class="mb-5">
+                  <h6 class="text-uppercase mb-2">Address</h6>
+                  <p class="lead mb-0">Nairobi, Kenya</p>
+                </div>
+                <div class="mb-5">
+                  <h6 class="text-uppercase mb-2">Phone</h6>
+                  <p class="lead mb-0">123123123</p>
+                </div>
+                <div class="mb-5">
+                  <h6 class="text-uppercase mb-2">Email</h6>
+                  <p class="lead mb-0">noverotich@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End Contact -->
+      </main>
+    </div>
 
+    <hr />
 
+    <!-- Footer -->
+    <footer class="text-center py-4">
+      <div class="container px-5 mb-2">
+        Copyright &copy; 202 Nov's Programming Academy.
+      </div>
+    </footer>
+    <!-- End Footer -->
 
+    <!-- custom js file -->
+    <script src="Js/index.js"></script>
 
-
-
-
-
-
-
-  <!-- custom js file -->
-  <script src="Js/index.js"></script>
-
-  <!-- custom bootstrap js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-</body>
+    <!-- custom bootstrap js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
